--- a/public/experimental/style/wf4nd.css
+++ b/public/experimental/style/wf4nd.css
@@ -206,6 +206,7 @@ html, body
     cursor: pointer;
     margin-left: -3px;
     margin-top: 2px;
+    display: inline-block;
 }
 
 .wf4nd-create-var:hover
@@ -218,22 +219,32 @@ html, body
 {
     display: inline-block;
     line-height: 20px;
-    margin-left: -4px;
 }
 
-.wf4nd-var-remove-btn
+.wf4nd-var-btns .wf4nd-btn
 {
-    background-image: url("images/remove.png");
     width: 16px;
     height: 16px;
     vertical-align: middle;
     line-height: 20px;
     display: inline-block;
-    opacity: 0.75;
+    opacity: 0.7;
     cursor: pointer;
+    position: relative;
 }
 
-.wf4nd-var-remove-btn:hover
+.wf4nd-var-btns .wf4nd-remove
+{
+    background-image: url("images/remove.png");
+    margin: -3px;
+}
+
+.wf4nd-var-btns .wf4nd-activities
+{
+    background-image: url("images/activities.png");
+}
+
+.wf4nd-var-btns .wf4nd-btn:hover
 {
     opacity: 1;
 }
