--- a/public/experimental/style/wf4nd.css
+++ b/public/experimental/style/wf4nd.css
@@ -371,3 +371,39 @@ ul.wf-categories > li > ul
 {
     display: none;
 }
+
+.wf-propg-list ul, .wf-propg-list li
+{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.wf-propg-list .wf-expandable
+{
+    margin: 6px 2px;
+}
+
+.wf-value-type-btn
+{
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    vertical-align: middle;
+    margin-right: -4px;
+}
+
+.wf-expression
+{
+    background-image: url(images/expression.png);
+}
+
+.wf-string
+{
+    background-image: url(images/string.png);
+}
+
+.wf-number
+{
+    background-image: url(images/number.png);
+}
