--- a/public/experimental/style/wf4nd.css
+++ b/public/experimental/style/wf4nd.css
@@ -384,26 +384,9 @@ ul.wf-categories > li > ul
     margin: 6px 2px;
 }
 
-.wf-value-type-btn
+.wf-set-value-select
 {
+    width: 250px;
     display: inline-block;
-    width: 16px;
-    height: 16px;
     vertical-align: middle;
-    margin-right: -4px;
-}
-
-.wf-expression
-{
-    background-image: url(images/expression.png);
-}
-
-.wf-string
-{
-    background-image: url(images/string.png);
-}
-
-.wf-number
-{
-    background-image: url(images/number.png);
 }
