--- a/public/wf4nd/views/workflowDesigner.html
+++ b/public/wf4nd/views/workflowDesigner.html
@@ -1,3 +1,5 @@
 <div>
-    Szevasz!
+    <input data-bind="kendoNumericTextBox: 5" />
+    <div class="wf-code" data-bind="template: { name: 'wf-activity-designer-tmpl', data: rootActivity }">
+    </div>
 </div>
