--- a/public/wf4nd/style/wf4nd.css
+++ b/public/wf4nd/style/wf4nd.css
@@ -1,56 +1,50 @@
-html, body
-{
+html, body {
     height: 100%;
     margin: 0;
     padding: 0;
 }
 
-.wf
-{
+.wf {
     min-height: 100%;
     position: relative;
     overflow-y: auto;
 }
 
-.wf-show
-{
+.wf-show {
     display: block !important;
     opacity: 1 !important;
 }
 
-.wf-op1
-{
+.wf-op1 {
     opacity: 1 !important;
 }
 
-.wf [contenteditable=true].single-line
-{
+.wf-dim {
+    opacity: 0.6 !important;
+}
+
+.wf [contenteditable=true].single-line {
     white-space: nowrap;
 }
 
-.wf .single-line br
-{
+.wf .single-line br {
     display: none;
 }
 
-.wf .single-line *
-{
+.wf .single-line * {
     display: inline;
 }
 
-.wf-expandable
-{
+.wf-expandable {
     position: relative;
     margin: 12px 2px;
 }
 
-.wf-expandable-activity
-{
+.wf-expandable-activity {
     margin: 2px;
 }
 
-.wf-activity h2
-{
+.wf-activity h2 {
     font-size: 12px;
     color: green;
     padding: 0;
@@ -58,20 +52,17 @@ html, body
     font-weight: normal;
 }
 
-.wf-activity .wf-closed h2
-{
+.wf-activity .wf-closed h2 {
     color: lightslategray;
 }
 
-.wf-exp-control
-{
+.wf-exp-control {
     position: absolute;
     width: 9px;
     height: 100%;
 }
 
-.wf-exp-btn
-{
+.wf-exp-btn {
     position: absolute;
     top: 3px;
     width: 9px;
@@ -80,13 +71,11 @@ html, body
     cursor: pointer;
 }
 
-.wf-closed .wf-exp-btn
-{
+.wf-closed .wf-exp-btn {
     background-image: url("images/plus.png");
 }
 
-.wf-exp-line
-{
+.wf-exp-line {
     position: absolute;
     top: 12px;
     left: 4px;
@@ -95,8 +84,7 @@ html, body
     background-color: lightgray;
 }
 
-.wf-exp-lineend
-{
+.wf-exp-lineend {
     position: absolute;
     height: 1px;
     left: 4px;
@@ -105,19 +93,16 @@ html, body
     background-color: lightgray;
 }
 
-.wf-exp-cnt
-{
+.wf-exp-cnt {
     padding-left: 13px;
 }
 
-.wf-activity
-{
+.wf-activity {
     font-family: Consolas, "Lucida Console", "Courier New";
     font-size: 12px;
 }
 
-.wf-icon
-{
+.wf-icon {
     display: inline-block;
     vertical-align: text-bottom;
     width: 16px;
@@ -125,14 +110,12 @@ html, body
     text-align: center;
 }
 
-.wf-icon img
-{
+.wf-icon img {
     max-width: 16px;
     max-height: 16px;
 }
 
-.wf-tag
-{
+.wf-tag {
     display: inline-block;
     font-weight: bold;
     margin-right: -3px;
@@ -140,13 +123,11 @@ html, body
     color: maroon;
 }
 
-.wf-closed .wf-tag
-{
+.wf-closed .wf-tag {
     color: lightslategray;
 }
 
-.wf-edit
-{
+.wf-edit {
     display: inline-block;
     min-width: 6px;
     padding: 1px;
@@ -157,68 +138,56 @@ html, body
     vertical-align: middle;
 }
 
-.wf-closed .wf-edit
-{
+.wf-closed .wf-edit {
     color: lightslategray;
     border: 1px solid transparent;
 }
 
-.wf-edit:hover
-{
+.wf-edit:hover {
     background-color: rgba(0, 186, 209, 0.10);
     border: 1px solid rgba(134, 149, 150, 0.52);
 }
 
-.wf-closed .wf-display-name:hover
-{
+.wf-closed .wf-display-name:hover {
     background-color: inherit;
 }
 
-.wf-brace
-{
+.wf-brace {
     display: inline-block;
     color: black;
 }
 
-.wf-closed .wf-brace
-{
+.wf-closed .wf-brace {
     color: lightslategray;
 }
 
-.wf-br-open
-{
+.wf-br-open {
     margin-left: -3px;
 }
 
-.wf-br-closed-end
-{
+.wf-br-closed-end {
     display: none;
 }
 
-.wf-closed .wf-br-closed-end
-{
+.wf-closed .wf-br-closed-end {
     display: inline;
 }
 
-.wf-value-list ul, .wf-value-list li
-{
+.wf-value-list ul, .wf-value-list li {
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-.wf-closed .wf-value-list-body
-{
+.wf-closed .wf-value-list-body {
     display: none;
 }
 
-.wf-value-list-body > ul > li
-{
+.wf-value-list-body > ul > li {
     position: relative;
 }
 
-.wf-value-list .wf-exp-row
-{
+.wf-value-list .wf-exp-row {
     background-color: lightgray;
     position: absolute;
     top: 11px;
@@ -227,25 +196,21 @@ html, body
     left: -9px;
 }
 
-.wf-value-list ul > li
-{
+.wf-value-list ul > li {
     padding: 1px 0;
 }
 
-.wf-var-name
-{
+.wf-var-name {
     color: navy;
     font-weight: bold;
     display: inline-block;
 }
 
-.wf-var-value
-{
+.wf-var-value {
     color: black;
 }
 
-.wf-create-value
-{
+.wf-create-value {
     background-image: url("images/add.png");
     background-repeat: no-repeat;
     background-position: left center;
@@ -261,20 +226,17 @@ html, body
     display: inline-block;
 }
 
-.wf-create-value:hover
-{
+.wf-create-value:hover {
     background-image: url("images/add-light.png");
     color: gray;
 }
 
-.wf-btns
-{
+.wf-btns {
     display: inline-block;
     line-height: 20px;
 }
 
-.wf-btns .wf-btn
-{
+.wf-btns .wf-btn {
     width: 16px;
     height: 16px;
     vertical-align: middle;
@@ -285,29 +247,24 @@ html, body
     position: relative;
 }
 
-.wf-btns .wf-remove
-{
+.wf-btns .wf-remove {
     background-image: url("images/remove.png");
     margin: -3px;
 }
 
-.wf-head .wf-remove
-{
+.wf-head .wf-remove {
     margin: -5px;
 }
 
-.wf-btns .wf-activities
-{
+.wf-btns .wf-activities {
     background-image: url("images/activities.png");
 }
 
-.wf-btns .wf-btn:hover
-{
+.wf-btns .wf-btn:hover {
     opacity: 1;
 }
 
-ul.wf-categories, ul.wf-categories > li > ul
-{
+ul.wf-categories, ul.wf-categories > li > ul {
     width: 160px;
     background-color: #dfe5ef;
     display: none;
@@ -318,75 +275,85 @@ ul.wf-categories, ul.wf-categories > li > ul
     border: 1px solid #adc7d6;
 }
 
-ul.wf-categories > li
-{
+ul.wf-categories > li {
     position: relative;
     padding-left: 10px;
 }
 
-ul.wf-categories li
-{
+ul.wf-categories li {
     padding: 2px;
 }
 
-ul.wf-categories li:hover
-{
+ul.wf-categories li:hover {
     background-color: #bfdaf5;
 }
 
-ul.wf-categories > li:hover > ul
-{
+ul.wf-categories > li:hover > ul {
     display: block;
 }
 
-ul.wf-categories > li > ul
-{
+ul.wf-categories > li > ul {
     left: 100%;
     top: -1px;
 }
 
-.wf-categories .wf-icon
-{
+.wf-categories .wf-icon {
     background-repeat: no-repeat;
     background-position: left center;
     padding-left: 20px;
 }
 
-.wf-submenu
-{
+.wf-submenu {
     background: url("images/submenu.png") no-repeat right center;
 }
 
-.wf-activity-body
-{
+.wf-activity-body {
     padding-left: 24px;
 }
 
-.wf-closed .wf-activity-body
-{
+.wf-closed .wf-activity-body {
     display: none;
 }
 
-.wf-closed .wf-activity-closing
-{
+.wf-closed .wf-activity-closing {
     display: none;
 }
 
-.wf-propg-list ul, .wf-propg-list li
-{
+.wf-propg-list ul, .wf-propg-list li {
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-.wf-propg-list .wf-expandable
-{
+.wf-propg-list .wf-expandable {
     margin: 6px 2px;
 }
 
-.wf-set-value-select
-{
+.wf-set-value-select {
     width: 250px;
     display: inline-block;
     vertical-align: middle;
+}
+
+.wf-to-null {
+    text-decoration: line-through;
+    cursor: pointer;
+}
+
+.wf-to-null:hover {
+    text-decoration: none;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.wf-to-non-null {
+    text-decoration: none;
+    font-weight: bold;
+    cursor: default;
+}
+
+.wf-to-non-null:hover {
+    text-decoration: none;
+    font-weight: bold;
+    cursor: default;
 }
