--- a/public/wf4nd/views/value.html
+++ b/public/wf4nd/views/value.html
@@ -1,51 +1,63 @@
 <div class="wf-value">
     <div class="wf-exp-row"></div>
-        <span data-bind="visible: typeID === 'variable'">
-            <div class="wf-edit wf-var-name single-line" contenteditable="true"
-                 data-bind="text: name"></div>:
+
+    <span data-bind="if: typeID === 'variable'">
+        <div class="wf-edit wf-var-name single-line" contenteditable="true"
+             data-bind="htmlValue: name"></div><!-- -->:
+    </span>
+
+    <span data-bind="if: typeID === 'property'">
+        <div class="wf-var-name"
+             data-bind="text: name"></div><!-- -->:
+    </span>
+
+    <span data-bind="if: typeID === 'value'">
+        <div class="wf-var-name">
+            <span data-bind="text: $index"></span><!-- -->:
+        </div>
+    </span>
+
+    <span data-bind="if: activity() === null">
+
+        <!-- Nullable -->
+        <span data-bind="if: type() !== 'expression' && nullable()">
+            <span class="wf-to-null" data-bind="css: { 'wf-to-non-null': isNull() }, click: toNull()">null</span> |
         </span>
-    <div class="wf-var-name"
-         data-bind="text: name, visible: typeID === 'property'"></div><!--
-             -->:
-        <span data-bind="visible: typeID === 'value'">
-            <div class="wf-var-name">
-                <span data-bind="text: $index"></span>:
-            </div>
+
+        <span data-bind="if: type() === 'expression'">
+            <div class="wf-edit wf-var-value single-line" contenteditable="true"
+                 data-bind="htmlValue: expression"></div>
         </span>
-        <span data-bind="if: activity() === null">
-            <span data-bind="if: type() === 'expression'">
-                <div class="wf-edit wf-var-value single-line" contenteditable="true"
-                     data-bind="text: expression"></div>
-            </span>
-            <span data-bind="if: type() === 'string'">
-                <span style="text-decoration: line-through">null</span>
-                "<!--
-                --><div class="wf-edit wf-var-value single-line" contenteditable="true"
-                        data-bind="text: expression"></div><!--
-                -->"
-            </span>
-            <span data-bind="if: type() === 'number'">
-                <input data-bind="kendoNumericTextBox: expression" />
-            </span>
-            <span data-bind="if: type() === 'boolean'">
-                <input data-bind="checked: expression" type="checkbox" />
-            </span>
-            <span data-bind="if: type() === 'datetime'">
-                <input data-bind="kendoDateTimePicker: { value: expression }" />
-            </span>
-            <span data-bind="if: type() === 'date'">
-                <input data-bind="kendoDatePicker: { value: expression }" />
-            </span>
-            <span data-bind="if: type() === 'time'">
-                <input data-bind="kendoTimePicker: { value: expression }" />
-            </span>
-            <span data-bind="if: type() === 'enum'">
-                <input data-bind="kendoDropDownList: { value: expression, data: $data.values, dataTextField: 'name', dataValueField: 'value' }" />
-            </span>
-            <span data-bind="if: type() === 'set'">
-                <select class="wf-set-value-select" data-bind="kendoMultiSelect: { value: expression, data: $data.values, dataTextField: 'name', dataValueField: 'value' }" />
-            </span>
+
+        <span data-bind="if: type() === 'string'">
+            "<!-- --><div class="wf-edit wf-var-value single-line" contenteditable="true"
+                          data-bind="htmlValue: expression"></div><!-- -->"
         </span>
+        <span data-bind="if: type() === 'number'">
+            <input data-bind="kendoNumericTextBox: { value: expression }"/>
+        </span>
+        <span data-bind="if: type() === 'boolean'">
+            <input data-bind="checked: expression" type="checkbox"/>
+        </span>
+        <span data-bind="if: type() === 'datetime'">
+            <input data-bind="kendoDateTimePicker: { value: expression }"/>
+        </span>
+        <span data-bind="if: type() === 'date'">
+            <input data-bind="kendoDatePicker: { value: expression }"/>
+        </span>
+        <span data-bind="if: type() === 'time'">
+            <input data-bind="kendoTimePicker: { value: expression }"/>
+        </span>
+        <span data-bind="if: type() === 'enum'">
+            <input data-bind="kendoDropDownList: { value: expression, data: $data.values, dataTextField: 'name', dataValueField: 'value' }"/>
+        </span>
+        <span data-bind="if: type() === 'set'">
+            <select class="wf-set-value-select"
+                    data-bind="kendoMultiSelect: { value: expression, data: $data.values, dataTextField: 'name', dataValueField: 'value' }"/>
+        </span>
+
+    </span>
+
     <div class="wf-btns">
         <div class="wf-btn wf-activities"
              data-bind="click: function() { $parent.showCategories.call($parent, $data) }, event: { mouseover: onMouseOverCategoryMenu, mouseout: onMouseOutCategoryMenu }, css: { 'wf-op1': categoryMenuVisible() }">
@@ -66,6 +78,6 @@
              data-bind="click: remove, visible: $parent.items().length > 1 && typeID !== 'property'"></div>
     </div>
     <div class="wf-war-activity" data-bind="if: activity() !== null">
-        <div data-bind="template: { name: 'wf-activity-tmpl', data: activity }"></div>
+        <div data-bind="template: { name: 'wf-activity-designer-tmpl', data: activity }"></div>
     </div>
 </div>
